<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="10dp"

        >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D6D6D6"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_of_product"
            android:layout_width="90dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_baseline_battery_full_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/product_name"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/favorite_img"
            app:layout_constraintStart_toEndOf="@id/img_of_product"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favorite_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_outline_favorite_border_50"
            app:layout_constraintBottom_toBottomOf="@id/product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/product_name" />


        <TextView
            android:id="@+id/in_existence_case_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/in_existence_case_tv"
            android:textSize="10sp"
            app:layout_constraintEnd_toStartOf="@id/favorite_img"
            app:layout_constraintStart_toEndOf="@id/img_of_product"
            app:layout_constraintTop_toBottomOf="@id/product_name" />

        <TextView
            android:id="@+id/old_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/crossline"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/old_price"
            android:textColor="#00A"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/img_of_product"
            app:layout_constraintTop_toBottomOf="@id/in_existence_case_tv" />

        <TextView
            android:id="@+id/new_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/new_price"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            app:layout_constraintStart_toEndOf="@id/img_of_product"
            app:layout_constraintTop_toBottomOf="@id/old_price" />

        <Button
            android:id="@+id/basket_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#450E50"
            android:drawableStart="@drawable/ic_outline_shopping_cart_24"
            android:drawableLeft="@drawable/ic_outline_shopping_cart_24"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/to_basket"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_price" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:columnCount="3"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/basket_btn">

            <ImageButton
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:background="@drawable/search_view_border"
                android:src="@drawable/ic_baseline_remove_24" />

            <TextView
                android:id="@+id/count_tv"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/search_view_border"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_baseline_remove_24"
                android:text="1"
                android:textAlignment="center"
                android:textColor="#676767"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:background="@drawable/search_view_border"
                android:src="@drawable/ic_baseline_add_24" />


        </GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
